# C-

./: README.md
Chapter04/: CMakeLists.txt  Chapter04PhotoTool.cpp  Chapter04PhotoTool.h
Chapter05/: CMakeLists.txt  main.cpp
Chapter05/utils/: MultipleImageWindow.cpp  MultipleImageWindow.h
Chapter06/: main.cpp
Chapter06/utils/: MultipleImageWindow.cpp  MultipleImageWindow.h
Chapter07/: overlayFaceMask.cpp  overlaySunglasses.cpp
Chapter08/: CMakeLists.txt
Chapter08/main/: CMakeLists.txt  backgroundSubtraction.cpp  erosion.cpp  frameDifferencing.cpp  morphologicalOperations.cpp
Chapter11/: CMakeLists.txt  ocr.cpp
Chapter11/src/: detection.cpp
Chapter12/: CMakeLists.txt
Chapter12/src/: ResNetSSDFace.cpp  main.cpp
OpenCVCMakeConfigDemo/: CMakeConfigDemo.cpp  CMakeConfigDemo.h  CMakeLists.txt
OpenCVReadWriteImages/: ReadWriteImages.aps  ReadWriteImages.cpp  ReadWriteImages.sln  ReadWriteImages.vcxproj  ReadWriteImages.vcxproj.filters
OpenCVReadWriteImages/x64/Debug/: ReadWriteImages.exe.recipe  ReadWriteImages.ilk  ReadWriteImages.vcxproj.FileListAbsolute.txt  vc143.idb
OpenCVReadWriteImages/x64/Debug/ReadWriteImages.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ReadWriteImages.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TodoApp/TodoApp/: mainwindow.cpp  mainwindow.h  mainwindow.ui  task.cpp  task.h  task.ui
TodoApp/build-TodoApp-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h  ui_task.h
TodoApp/build-TodoApp-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
TodoApp/build-TodoApp-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: main.cpp.184121A4AE975F42.idx  mainwindow.cpp.7A34FEB2FC67CC72.idx  mainwindow.h.B78E25E7B6207056.idx  qcontainerfwd.h.87B0AC3026CA9E36.idx  qmetacontainer.h.296E2C8A3F56A6D2.idx  qobjectdefs.h.AC4D3D0F54032630.idx  qobjectdefs_impl.h.CC8B5E108F5FB884.idx  qpaintdevice.h.85F96BC29799EFC0.idx  qshareddata.h.A73C73BDE9C4C7F3.idx  qurl.h.C122AA3B19ECF6F9.idx  task.cpp.3660B2E6342C6FD2.idx  task.h.425924FB8C2F5613.idx  ui_mainwindow.h.E7B63BF67950E91D.idx
TodoApp/build-TodoApp-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  moc_task.cpp
